Update ConsoleFunction.cpp Add LoginFunction.cpp and SupportFunction.cpp

--- a/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClCompile Include="ConsoleFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LoginFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SupportFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
