--- a/A_Course_Management_System/A_Course_Management_System.vcxproj
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj
@@ -131,7 +131,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleFunction.cpp" />
+    <ClCompile Include="LoginFunction.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="SupportFunction.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
