add StaffMemberFunction.cpp and Update other *.cpp

--- a/A_Course_Management_System/A_Course_Management_System.vcxproj
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj
@@ -133,6 +133,8 @@
     <ClCompile Include="ConsoleFunction.cpp" />
     <ClCompile Include="LoginFunction.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Management.cpp" />
+    <ClCompile Include="StaffMemberFunction.cpp" />
     <ClCompile Include="SupportFunction.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
