--- a/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClCompile Include="SupportFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Management.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StaffMemberFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
