--- a/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="StaffMemberFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="User_Info_Management.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
