Change the way data is stored

--- a/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="User_Info_Management.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StudentFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
