--- a/A_Course_Management_System/A_Course_Management_System.vcxproj
+++ b/A_Course_Management_System/A_Course_Management_System.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Management.cpp" />
     <ClCompile Include="StaffMemberFunction.cpp" />
+    <ClCompile Include="StudentFunction.cpp" />
     <ClCompile Include="SupportFunction.cpp" />
     <ClCompile Include="User_Info_Management.cpp" />
   </ItemGroup>
